--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -11,78 +11,100 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="sample.Controller">
   <children>
-    <Label layoutX="14.0" layoutY="14.0" prefHeight="24.0" prefWidth="197.0" text="Стоимость трубы 60х40/п.м." />
-    <Label layoutX="14.0" layoutY="38.0" prefHeight="24.0" prefWidth="197.0" text="Стоимость трубы 50х30/п.м." />
-    <Label layoutX="14.0" layoutY="62.0" prefHeight="24.0" prefWidth="197.0" text="Стоимость трубы 40х40/п.м." />
-    <Label layoutX="14.0" layoutY="86.0" prefHeight="24.0" prefWidth="197.0" text="Стоимость трубы 40х20/п.м." />
-    <Label layoutX="14.0" layoutY="182.0" prefHeight="24.0" prefWidth="197.0" text="Стоимость уголка 50х25/п.м." />
-    <Label layoutX="14.0" layoutY="206.0" prefHeight="24.0" prefWidth="197.0" text="Стоимость уголка 50х20/п.м." />
-    <Label layoutX="14.0" layoutY="110.0" prefHeight="24.0" prefWidth="197.0" text="Стоимость трубы 25х25/п.м." />
-    <Label layoutX="14.0" layoutY="134.0" prefHeight="24.0" prefWidth="197.0" text="Стоимость трубы 20х20/п.м." />
-    <Label layoutX="14.0" layoutY="254.0" prefHeight="24.0" prefWidth="197.0" text="Стоимость листа (1.25х2.5м)" />
-    <Label layoutX="14.0" layoutY="278.0" prefHeight="48.0" prefWidth="197.0" text="Стоимость листа (1.25х2.5м) &#10;толщина 1.5" />
-    <Label layoutX="14.0" layoutY="326.0" prefHeight="24.0" prefWidth="197.0" text="Стоимость листа (1х2м)" />
-    <Label layoutX="14.0" layoutY="350.0" prefHeight="48.0" prefWidth="197.0" text="Стоимость листа (1х2м) &#10;толщина 1.5" />
-    <Label layoutX="14.0" layoutY="398.0" prefHeight="24.0" prefWidth="197.0" text="Стоимость листа/м2" />
-    <Label layoutX="14.0" layoutY="446.0" prefHeight="24.0" prefWidth="197.0" text="Стоимость старта/п.м." />
-    <Label layoutX="14.0" layoutY="470.0" prefHeight="24.0" prefWidth="197.0" text="Стоимость петли/шт" />
-    <Label layoutX="14.0" layoutY="494.0" prefHeight="24.0" prefWidth="197.0" text="Стоимость уплотнителя/п.м." />
-    <Label layoutX="14.0" layoutY="518.0" prefHeight="24.0" prefWidth="197.0" text="Стоимость утеплителя/п.м." />
-    <TextField layoutX="211.0" layoutY="15.0" prefWidth="60.0" />
-    <TextField layoutX="211.0" layoutY="39.0" prefWidth="60.0" />
-    <TextField layoutX="211.0" layoutY="63.0" prefWidth="60.0" />
-    <TextField layoutX="211.0" layoutY="87.0" prefWidth="60.0" />
-    <TextField layoutX="211.0" layoutY="111.0" prefWidth="60.0" />
-    <TextField layoutX="211.0" layoutY="135.0" prefWidth="60.0" />
-    <TextField layoutX="211.0" layoutY="183.0" prefWidth="60.0" />
-    <TextField layoutX="211.0" layoutY="207.0" prefWidth="60.0" />
-    <TextField layoutX="211.0" layoutY="256.0" prefWidth="60.0" />
-    <TextField layoutX="211.0" layoutY="291.0" prefWidth="60.0" />
-    <TextField layoutX="211.0" layoutY="327.0" prefWidth="60.0" />
-    <TextField layoutX="211.0" layoutY="363.0" prefWidth="60.0" />
-    <TextField layoutX="211.0" layoutY="447.0" prefWidth="60.0" />
-    <TextField layoutX="211.0" layoutY="471.0" prefWidth="60.0" />
-    <TextField layoutX="211.0" layoutY="495.0" prefWidth="60.0" />
-    <TextField layoutX="211.0" layoutY="519.0" prefWidth="60.0" />
-    <Label layoutX="629.0" layoutY="14.0" prefHeight="24.0" prefWidth="197.0" text="Глазок тип 1" />
-    <TextField layoutX="826.0" layoutY="15.0" prefWidth="60.0" />
-    <Label layoutX="323.0" layoutY="14.0" prefHeight="24.0" prefWidth="197.0" text="Пленка антивандальная/п.м." />
-    <TextField layoutX="520.0" layoutY="15.0" prefWidth="60.0" />
-    <Label layoutX="323.0" layoutY="38.0" prefHeight="24.0" prefWidth="197.0" text="Пленка самоклеющяяся/п.м." />
-    <TextField layoutX="520.0" layoutY="39.0" prefWidth="60.0" />
-    <Label layoutX="322.0" layoutY="350.0" prefHeight="24.0" prefWidth="197.0" text="Гипсокартон/м2" />
-    <Label layoutX="322.0" layoutY="374.0" prefHeight="24.0" prefWidth="197.0" text="Минватая/м2" />
-    <Label layoutX="322.0" layoutY="398.0" prefHeight="24.0" prefWidth="197.0" text="Огракс/п.м." />
-    <TextField layoutX="519.0" layoutY="351.0" prefWidth="60.0" />
-    <TextField layoutX="519.0" layoutY="375.0" prefWidth="60.0" />
-    <TextField layoutX="519.0" layoutY="399.0" prefWidth="60.0" />
-    <Label layoutX="323.0" layoutY="182.0" prefHeight="24.0" prefWidth="197.0" text="Покраска антик/м2" />
-    <Label layoutX="323.0" layoutY="206.0" prefHeight="24.0" prefWidth="197.0" text="Покраска ПФ/м2" />
-    <Label layoutX="323.0" layoutY="230.0" prefHeight="24.0" prefWidth="197.0" text="Покраска шагрень/м2" />
-    <TextField layoutX="520.0" layoutY="183.0" prefWidth="60.0" />
-    <TextField layoutX="520.0" layoutY="207.0" prefWidth="60.0" />
-    <TextField layoutX="520.0" layoutY="231.0" prefWidth="60.0" />
-    <Label layoutX="322.0" layoutY="279.0" prefHeight="24.0" prefWidth="197.0" text="Деревяный наличник/п.м." />
-    <TextField layoutX="519.0" layoutY="280.0" prefWidth="60.0" />
-    <Label layoutX="322.0" layoutY="302.0" prefHeight="24.0" prefWidth="197.0" text="Мет. Наличник п.м." />
-    <TextField layoutX="519.0" layoutY="303.0" prefWidth="60.0" />
-    <Label layoutX="629.0" layoutY="38.0" prefHeight="24.0" prefWidth="197.0" text="Глазок тип 2" />
-    <TextField layoutX="826.0" layoutY="39.0" prefWidth="60.0" />
-    <Label layoutX="629.0" layoutY="62.0" prefHeight="24.0" prefWidth="197.0" text="Глазок тип 3" />
-    <TextField layoutX="826.0" layoutY="63.0" prefWidth="60.0" />
-    <Label layoutX="629.0" layoutY="110.0" prefHeight="24.0" prefWidth="197.0" text="Верхний замок тип 1" />
-    <TextField layoutX="826.0" layoutY="111.0" prefWidth="60.0" />
-    <Label layoutX="629.0" layoutY="134.0" prefHeight="24.0" prefWidth="197.0" text="Верхний замок тип 2" />
-    <TextField layoutX="826.0" layoutY="135.0" prefWidth="60.0" />
-    <Label layoutX="629.0" layoutY="158.0" prefHeight="24.0" prefWidth="197.0" text="Верхний замок тип 3" />
-    <TextField layoutX="826.0" layoutY="159.0" prefWidth="60.0" />
-    <Label layoutX="629.0" layoutY="206.0" prefHeight="24.0" prefWidth="197.0" text="Нижний замок тип 1" />
-    <TextField layoutX="826.0" layoutY="207.0" prefWidth="60.0" />
-    <Label layoutX="629.0" layoutY="230.0" prefHeight="24.0" prefWidth="197.0" text="Нижний замок тип 2" />
-    <TextField layoutX="826.0" layoutY="231.0" prefWidth="60.0" />
+    <Label layoutX="14.0" layoutY="38.0" prefHeight="24.0" prefWidth="197.0" text="Труба 60х40/п.м." />
+    <TextField fx:id="price60" layoutX="211.0" layoutY="39.0" prefWidth="60.0" />
+    <Label layoutX="14.0" layoutY="62.0" prefHeight="24.0" prefWidth="197.0" text="Труба 50х30/п.м." />
+    <TextField fx:id="price30" layoutX="211.0" layoutY="63.0" prefWidth="60.0" />
+    <Label layoutX="14.0" layoutY="86.0" prefHeight="24.0" prefWidth="197.0" text="Труба 40х40/п.м." />
+    <TextField fx:id="price4040" layoutX="211.0" layoutY="87.0" prefWidth="60.0" />
+    <Label layoutX="14.0" layoutY="110.0" prefHeight="24.0" prefWidth="197.0" text="Труба 40х20/п.м." />
+    <TextField fx:id="price40" layoutX="211.0" layoutY="111.0" prefWidth="60.0" />
+    <Label layoutX="14.0" layoutY="183.0" prefHeight="24.0" prefWidth="197.0" text="Труба 50х25/п.м." />
+    <TextField fx:id="price50" layoutX="211.0" layoutY="184.0" prefWidth="60.0" />
+    <Label layoutX="14.0" layoutY="134.0" prefHeight="24.0" prefWidth="197.0" text="Труба 25х25/п.м." />
+    <TextField fx:id="price25" layoutX="211.0" layoutY="135.0" prefWidth="60.0" />
+    <Label layoutX="14.0" layoutY="158.0" prefHeight="24.0" prefWidth="197.0" text="Труба 20х20/п.м." />
+    <TextField fx:id="price20" layoutX="211.0" layoutY="159.0" prefWidth="60.0" />
+    <Label layoutX="14.0" layoutY="230.0" prefHeight="24.0" prefWidth="197.0" text="Лист (1х2м) толщина 1.5/шт" />
+    <TextField fx:id="lprice15" layoutX="211.0" layoutY="232.0" prefWidth="60.0" />
+    <TextField fx:id="lm_price15" layoutX="211.0" layoutY="256.0" prefWidth="60.0" />
+    <Label layoutX="14.0" layoutY="374.0" prefHeight="24.0" prefWidth="197.0" text="Стоимость старта/п.м." />
+    <TextField fx:id="in_price" layoutX="211.0" layoutY="375.0" prefWidth="60.0" />
+    <Label layoutX="14.0" layoutY="398.0" prefHeight="24.0" prefWidth="197.0" text="Стоимость петли/шт" />
+    <TextField fx:id="pprice" layoutX="211.0" layoutY="399.0" prefWidth="60.0" />
+    <Label layoutX="14.0" layoutY="422.0" prefHeight="24.0" prefWidth="197.0" text="Стоимость уплотнителя/п.м." />
+    <TextField fx:id="yp_price" layoutX="211.0" layoutY="422.0" prefWidth="60.0" />
+    <Label layoutX="14.0" layoutY="446.0" prefHeight="24.0" prefWidth="197.0" text="Стоимость утеплителя/п.м." />
+    <TextField fx:id="y_price" layoutX="211.0" layoutY="447.0" prefWidth="60.0" />
+    <Label layoutX="588.0" layoutY="14.0" prefHeight="24.0" prefWidth="197.0" text="Замок &quot;KALE&quot; 257L верхн/шт" />
+    <TextField layoutX="815.0" layoutY="15.0" prefWidth="60.0" />
+    <Label layoutX="303.0" layoutY="14.0" prefHeight="24.0" prefWidth="197.0" text="Пленка антивандальная/п.м." />
+    <TextField fx:id="ot_price" layoutX="500.0" layoutY="15.0" prefWidth="60.0" />
+    <Label layoutX="303.0" layoutY="38.0" prefHeight="24.0" prefWidth="197.0" text="Пленка самоклеющяяся/п.м." />
+    <TextField fx:id="plenka" layoutX="500.0" layoutY="39.0" prefWidth="60.0" />
+    <Label layoutX="302.0" layoutY="374.0" prefHeight="24.0" prefWidth="197.0" text="Гипсокартон/м2" />
+    <Label layoutX="302.0" layoutY="398.0" prefHeight="24.0" prefWidth="197.0" text="Минватая/м2" />
+    <Label layoutX="302.0" layoutY="422.0" prefHeight="24.0" prefWidth="197.0" text="Огракс/п.м." />
+    <TextField fx:id="gips" layoutX="499.0" layoutY="375.0" prefWidth="60.0" />
+    <TextField fx:id="vata" layoutX="499.0" layoutY="399.0" prefWidth="60.0" />
+    <TextField fx:id="ogr" layoutX="499.0" layoutY="424.0" prefWidth="60.0" />
+    <Label layoutX="303.0" layoutY="86.0" prefHeight="24.0" prefWidth="197.0" text="Порошковая покраска шагрень/м2" />
+    <Label layoutX="303.0" layoutY="110.0" prefHeight="24.0" prefWidth="197.0" text="Порошковая покраска антик/м2" />
+    <Label layoutX="303.0" layoutY="134.0" prefHeight="24.0" prefWidth="197.0" text="Порошковая покраска ПФ/м2" />
+    <TextField fx:id="list_mag_price" layoutX="500.0" layoutY="87.0" prefWidth="60.0" />
+    <TextField fx:id="list_an_price" layoutX="500.0" layoutY="111.0" prefWidth="60.0" />
+    <TextField fx:id="list_pf_price" layoutX="500.0" layoutY="135.0" prefWidth="60.0" />
+    <Label layoutX="302.0" layoutY="304.0" prefHeight="24.0" prefWidth="197.0" text="Деревяный наличник/п.м." />
+    <TextField fx:id="dnal_price" layoutX="499.0" layoutY="305.0" prefWidth="60.0" />
+    <Label layoutX="302.0" layoutY="327.0" prefHeight="24.0" prefWidth="197.0" text="Мет. Наличник п.м." />
+    <TextField fx:id="lit_nal_price" layoutX="499.0" layoutY="328.0" prefWidth="60.0" />
+    <Label layoutX="588.0" layoutY="39.0" prefHeight="24.0" prefWidth="197.0" text="Замок &quot;KALE&quot; 1894MF верхн/шт" />
+    <TextField layoutX="815.0" layoutY="39.0" prefWidth="60.0" />
+    <Label layoutX="588.0" layoutY="62.0" prefHeight="24.0" prefWidth="197.0" text="Замок &quot;KALE&quot; 252R нижн/шт" />
+    <TextField layoutX="815.0" layoutY="63.0" prefWidth="60.0" />
+    <Label layoutX="588.0" layoutY="110.0" prefHeight="24.0" prefWidth="197.0" text="Замок &quot;Apecs&quot; 2200 нижн/шт" />
+    <TextField layoutX="815.0" layoutY="111.0" prefWidth="60.0" />
+    <Label layoutX="588.0" layoutY="134.0" prefHeight="24.0" prefWidth="197.0" text="Замок &quot;KALE&quot; 2000 нижн/шт" />
+    <TextField layoutX="815.0" layoutY="135.0" prefWidth="60.0" />
+    <Label layoutX="588.0" layoutY="158.0" prefHeight="24.0" prefWidth="197.0" text="Броненакладка Apecs Protector/шт" />
+    <TextField layoutX="815.0" layoutY="159.0" prefWidth="60.0" />
     <Label layoutX="629.0" layoutY="470.0" prefHeight="24.0" prefWidth="130.0" text="Дата обновления" />
-    <TextField layoutX="826.0" layoutY="255.0" prefWidth="60.0" />
-    <TextField layoutX="759.0" layoutY="471.0" prefWidth="127.0" />
-    <Button layoutX="629.0" layoutY="495.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="257.0" text="Зашифровать" />
+    <TextField layoutX="759.0" layoutY="471.0" prefWidth="127.0" text="" />
+    <Button layoutX="629.0" layoutY="495.0" mnemonicParsing="false" onAction="#encrypt" prefHeight="46.0" prefWidth="257.0" text="Зашифровать" />
+    <Label layoutX="14.0" layoutY="14.0" prefHeight="24.0" prefWidth="197.0" text="Уголок 50х4/п.м." />
+    <TextField fx:id="price" layoutX="211.0" layoutY="15.0" prefWidth="60.0" />
+    <Label layoutX="14.0" layoutY="255.0" prefHeight="24.0" prefWidth="197.0" text="Лист (1.25х2.5м) толщина 1.5/шт" />
+    <Label layoutX="14.0" layoutY="279.0" prefHeight="24.0" prefWidth="197.0" text="Лист (1х2м) толщина 2/шт" />
+    <TextField fx:id="lprice" layoutX="211.0" layoutY="281.0" prefWidth="60.0" />
+    <TextField fx:id="lm_price" layoutX="211.0" layoutY="305.0" prefWidth="60.0" />
+    <Label layoutX="14.0" layoutY="304.0" prefHeight="24.0" prefWidth="197.0" text="Лист (1.25х2.5м) толщина 2/шт" />
+    <Label layoutX="14.0" layoutY="327.0" prefHeight="24.0" prefWidth="197.0" text="Стоимость 1м2 листа толщина 2/м2" />
+    <TextField fx:id="listm2" layoutX="211.0" layoutY="328.0" prefWidth="60.0" />
+    <Label layoutX="302.0" layoutY="182.0" prefHeight="24.0" prefWidth="197.0" text="Стоимость МДФ 10/м2" />
+    <Label layoutX="302.0" layoutY="206.0" prefHeight="24.0" prefWidth="197.0" text="Стоимость МДФ 16/м2" />
+    <TextField fx:id="m10_price" layoutX="499.0" layoutY="183.0" prefWidth="60.0" />
+    <TextField fx:id="m16_price" layoutX="499.0" layoutY="207.0" prefWidth="60.0" />
+    <Label layoutX="302.0" layoutY="230.0" prefHeight="24.0" prefWidth="197.0" text="Стоимость пластика/м2" />
+    <TextField fx:id="pl_price" layoutX="499.0" layoutY="232.0" prefWidth="60.0" />
+    <Label layoutX="302.0" layoutY="253.0" prefHeight="24.0" prefWidth="197.0" text="Стоимость ламината/м2" />
+    <TextField fx:id="la_price" layoutX="499.0" layoutY="254.0" prefWidth="60.0" />
+    <Label layoutX="588.0" layoutY="86.0" prefHeight="24.0" prefWidth="197.0" text="Замок &quot;MOTTURA&quot; 54797 нижн/шт" />
+    <TextField layoutX="815.0" layoutY="87.0" prefWidth="60.0" />
+    <Label layoutX="591.0" layoutY="206.0" prefHeight="24.0" prefWidth="229.0" text="Ручки раздельные &quot;Apecs&quot; хром/компл" />
+    <TextField layoutX="815.0" layoutY="207.0" prefWidth="60.0" />
+    <Label layoutX="588.0" layoutY="231.0" prefHeight="24.0" prefWidth="218.0" text="Ручки раздельные &quot;Apecs&quot; золото/комп" />
+    <TextField layoutX="815.0" layoutY="231.0" prefWidth="60.0" />
+    <Label layoutX="588.0" layoutY="254.0" prefHeight="24.0" prefWidth="218.0" text="Ручки на планке &quot;Apecs&quot; хром/компл" />
+    <TextField layoutX="815.0" layoutY="255.0" prefWidth="60.0" />
+    <Label layoutX="588.0" layoutY="302.0" prefHeight="24.0" prefWidth="218.0" text="Ручки &quot;Aydemir&quot; коричневые/компл" />
+    <TextField layoutX="815.0" layoutY="303.0" prefWidth="60.0" />
+    <Label layoutX="588.0" layoutY="326.0" prefHeight="24.0" prefWidth="197.0" text="Ручки &quot;Aydemir&quot; черные/комплект" />
+    <TextField layoutX="815.0" layoutY="327.0" prefWidth="60.0" />
+    <Label layoutX="588.0" layoutY="277.0" prefHeight="24.0" prefWidth="218.0" text="Ручки на планке &quot;Apecs&quot; золото/компл" />
+    <TextField layoutX="815.0" layoutY="279.0" prefWidth="60.0" />
+    <Label layoutX="585.0" layoutY="374.0" prefHeight="24.0" prefWidth="197.0" text="Глазок ГДШ 200/шт" />
+    <TextField layoutX="812.0" layoutY="375.0" prefWidth="60.0" />
+    <Label layoutX="585.0" layoutY="397.0" prefHeight="24.0" prefWidth="197.0" text="Глазок ГДШ 10-200/шт" />
+    <TextField layoutX="812.0" layoutY="398.0" prefWidth="60.0" />
   </children>
 </AnchorPane>
